# chirp3-karaoke

./: .gitignore  01-setup-iam.sh  02-karaoke_maker.sh  03-setup_music.py  99-cleanup-iam.sh  99-cleanup_iam.sh  Dockerfile  INSTRUCTIONS.md  README.md  README_KARAOKE_MAKER.md  README_MUSIC_SETUP.md  README_UVR.md  TODO.md  addcomment.py  artist1.sh  artists.sh  artists_example.sh  cleanup-iam.sh  cleanup_iam.sh  deploy.sh  karaoke_maker.py  karaoke_maker.sh  leaderboard.json  main.py  mixtape_example.txt  pyproject.toml  quickstart.txt  requirements.txt  setup-iam.sh  setup_data.py  setup_iam.sh  setup_music.py  songs.json  start.sh  test_karaoke.py  uvr_wrapper.sh
docs/: FOLDER_SETUP.md  PROJECT_STRUCTURE.md
old/: setup_songs.sh
static/: audio-processor.js  script.js  style.css
templates/: index.html
