[project]
name = "karaoke-king"
version = "1.0.0"
description = "Advanced karaoke application with real-time transcription and scoring"
authors = [
    {name = "dazdaz", email = "darren@dazdaz.org"},
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Games/Entertainment :: Puzzle Games",
]
dependencies = [
    "flask==3.0.0",
    "google-cloud-speech==2.26.0",
    "requests",
    "beautifulsoup4",
    "jellyfish",
    "mutagen",
    "audio-separator>=0.39.0",
    "torch>=2.3.0",
    "torchaudio>=2.3.0",
    "onnxruntime>=1.23.0",
]

[dependency-groups]
dev = [
    "pytest",
    "black",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/dazdaz/chirp3-karaoke-king"
Repository = "https://github.com/dazdaz/chirp3-karaoke-king"